Avoid use of inefficient constructors
Original author: jluehe
Date: 2006-10-05 00:02:19+00:00

svn path=/trunk/; revision=588